--- a/package.json
+++ b/package.json
@@ -11,9 +11,15 @@
     "formik": "^2.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-redux": "^9.2.0",
     "react-router": "^7.6.2",
     "react-router-dom": "^7.6.2",
+    "react-router-redux": "^4.0.8",
     "react-scripts": "5.0.1",
+    "redux": "^5.0.1",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^3.1.0",
+    "thunk": "^0.0.1",
     "web-vitals": "^2.1.4",
     "yup": "^1.6.1"
   },
